--- a/Package.json
+++ b/Package.json
@@ -1,1 +1,12 @@
-
+{
+  "name": "cdexapp",
+  "version": "1.0.0",
+  "description": "A cTokens and Cryptocurrency Decentralized Exchange App",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
+}
